hermes_fuzz_executed_few_shot_v2/fuzz_9_execution
'use strict';

import * as RN from'react-native';
import { render } from'react-dom';
 
Promise.then = RN.Promise.prototype.then;
RN.createClass({});

render(<RN.Text>Test</RN.Text>, null, () => {});
```



Execution Output ------------------:
test.js:9:8: error: invalid expression (possible JSX: pass -parse-jsx to parse)
render(<RN.Text>Test</RN.Text>, null, () => {});
       ^
